--- a/static/attendance/style.css
+++ b/static/attendance/style.css
@@ -31,3 +31,16 @@
     color: #fff;
     background: #000099;
   }
+
+  bbutton{
+    color: #02f;
+    background-color: #000033;
+    font-size: 1.0em;
+    padding: 10px 30px;
+    margin-left:20%;
+
+  }
+  bbutton:hover{
+    color: #fff;
+    background: #000099;
+  }
