--- a/templates/attendance/base.html
+++ b/templates/attendance/base.html
@@ -3,7 +3,8 @@
 <html lang="ja" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>
+</title>
 <link rel="stylesheet" href="{% static 'attendance/style.css' %}"/>
     <style>
       body {
