--- a/templates/attendance/admin_form.html
+++ b/templates/attendance/admin_form.html
@@ -39,7 +39,8 @@
         </tbody>
       </table>
       <a href="{% url 'Register' %}">新規登録はこちら</a><br>
-      <a href="{% url 'Login' %}">ログインはこちら</a><br>
+      <a href="{% url 'Login' %}">ログインはこちら</a><br><br>
+      <a href="{% url 'Daily' %}">日報をダウンロード</a>
  </div>
 
 {% endblock body %}
