--- a/templates/attendance/admin_form.html
+++ b/templates/attendance/admin_form.html
@@ -11,7 +11,9 @@
         <caption>STAFF</caption>
         <thead>
           <tr>
-            <th scope="col"><input class="form-check-input"></th>
+            <th scope="col"><div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="formCheckDefault">
+  </div><input class="form-check-input"></th>
             <th scope="col">名前</th>
             <th scope="col">状態</th>
             <th scope="col">出勤時間</th>
