--- a/templates/attendance/DB5_base.html
+++ b/templates/attendance/DB5_base.html
@@ -15,56 +15,31 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- MDB -->
     <link rel="stylesheet" href="{% static 'attendance/MDB5/css/mdb.min.css' %}" />
+    
     <title>
     {% block title %}
     {% endblock %}
     </title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/X.X.X/jquery.min.js"></script>
-    
 </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <!-- Start your project here-->
     {% block body %}
     {% endblock %}
     <!-- End your project here-->
 
     <!-- MDB -->
+   <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+ 
     <script type="text/javascript" src="{% static 'attendance/MDB5/js/mdb.min.js' %}"></script>
     <!-- Custom scripts -->
-    <script type="text/javascript">
-    function AllChecked(checked){/*
-    var checkbox = document.getElementByName('chks');
-    //var checkbox = document.account_select;
-    if (checkbox.length != -1){
-      alert(checkbox.length);
-    }
-    alert(checkbox.length);
-      for (var i=0; i<checkbox.length; i++){
-        checkbox[i].checked = true;
-      } 
-    }*/
-    </script>
     <script>
-    $(function() {
-    // 「全選択」する
-    $('#all').on('click', function() {
-      alert("a");
-      $("input[name='chks']").prop('checked', this.checked);
-    });
-/*
-  // 「全選択」以外のチェックボックスがクリックされたら、
-    $("input[name='chks']").on('click', function() {
-      if ($('#boxes :checked').length == $('#boxes :input').length) {
-        // 全てのチェックボックスにチェックが入っていたら、「全選択」 = checked
-        $('#select_all').prop('checked', true);
-      } else {
-        // 1つでもチェックが入っていたら、「全選択」 = checked
-        $('#select_all').prop('checked', false);
-      }
-    });*/
-});
+      {% block script %}
+      {% endblock %}
     </script>
     </body>
 </html>
