--- a/templates/attendance/checksheet.html
+++ b/templates/attendance/checksheet.html
@@ -5,28 +5,33 @@ checksheet
 {% endblock title %}
 {% block body %}
 <div class="container">
-    <header>
+    <form action="{% url 'CheckSheet' pk=CheckSheet.pk %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" class="form-control" name="total_pay" id="total_fee" value="0">
+  
+    {% if not CheckSheet.asign %}
+        <input type="submit" class="btn btn-primary" name="cancel" value="アサインをキャンセル">
+    {% endif %}
+        <header>
         <h1 class="text-center">会計表</h1>
     </header>
     <main>
         <div class="row">
             <div class="col">
-                <h4>{{CheckSheet.client.start_time|date:"Y年n月j日"}}</h4> 
+                <h4>{{CheckSheet.start_time|date:"Y年n月j日"}}</h4> 
             </div>
             <div class="col">
                 <div class="col">
-                    <h6>来店 : {{CheckSheet.client.start_overtime}}</h6>
+                    <h6>来店 : {{CheckSheet.start_overtime}}</h6>
                   
                 </div>
                 <div class="col">
-                    <h6>退店 : {{CheckSheet.client.end_overtime}}</h2>
+                    <h6>退店 : {{CheckSheet.end_overtime}}</h2>
                 </div>
             </div>
-        </row>
-        <form action="{% url 'CheckSheet' pk=CheckSheet.pk %}" method="post">
-            {% csrf_token %}
+        </row>  
         <div style="margin: 20px 50;">
-        <table class="table table-bordered table-sm align-middle">
+        <table class="table table-bordered table-sm align-middle" name="order_table">
             <thead>
               <tr>
                 <th scope="col">品名</th>
@@ -35,54 +40,80 @@ checksheet
                 <th scope="col">金額</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="order">
                 {% for item in CheckSheet.item_set.all %}
-                <tr>
-                  <th scope="row"><input type="text" name="item_name" class="form-control" value="{{item.item_name}}"></th>
-                  <td>
-                      <input type="number" name="item_num" id="itemNumber1" class="form-control" value="{{item.item_num}}" style="width: 60px;"/>
-                     
-                  </td>
-                  <td>
-                      <input type="text" pattern="^[0-9]+$" name="item_cost" id="itemCost1" class="form-control" value="{{item.item_cost}}" style="width: 80px;"/>
-                  </td>
-                  <td>
-                      <p name="total">0</p>
-                  </td>
-                </tr>
+                    <tr id="item_field">
+                        <td>
+                            <div class="input-group mb-2" name="item_name">
+                                <input type="text" name="item_name" class="form-control" aria-label="Text input with dropdown button" value="{{item.item_name}}">
+                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria_expanded="true"></button>
+                                <ul class="dropdown-menu">
+                                    {% for item in Menu.item_set.all %}
+                                    <li data-num="{{item.item_num}}" data-cost="{{item.item_cost}}"><a class="dropdown-item">{{item}}</a></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </td>
+                        <td>
+                            <input type="number" name="item_num" id="itemNumber" class="form-control" value="{{item.item_num}}" style="width: 60px;"/>
+                        </td>
+                        <td>
+                            <input type="text" pattern="^[0-9]+$" name="item_cost" id="itemCost" class="form-control" value="{{item.item_cost}}" style="width: 80px;"/>
+                        </td>
+                        <td>
+                            <p name="total">0</p>
+                        </td>
+                    </tr>
                 {% endfor %}
-              <tr>
             </tbody>
         </table>
-        
+        <div class="section1 text-center">
+            <button type="button" class="btn btn-outline-primary rounded-circle p-0" name="orderAdd" style="width:2rem;height:2rem;"><h4>＋</h4></button>
         </div>
         <div class="row">
             <div class="col-7">
                 <label for="table-id">テーブル</label>
-                {% for seat in CheckSheet.client.seat_set.all %}
-                    <h5 id="table-id">{{seat}},</h5>
+                <h4 id="table-id">
+                {% for seat in CheckSheet.seat_set.all %}
+                    {{seat}},
                 {% endfor %}
+                </h4>
                 <br>
                 <div class="row">
                     <div class="d-flex align-items-center">
-                        <input type="number" name="client_num" class="form-control" value="{{CheckSheet.client.client_num}}" style="width: 60px;">
+                        <input type="number" name="client_num" class="form-control" value="{{CheckSheet.client_num}}" style="width: 60px;">
                         <h4>　名</h4>
                     </div>
                 </div>
                 <br>
-                <div class="dropdown">
+                <div class="row" id="all_staff">
                     <label for="dropdownMenuButton1">係</label><br>
-                    <button class="btn btn-ontline-info dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{staff.1}}
-                    </button>
-                    <ul class="dropdown-menu" name="staff" aria-labelledby="dropdownMenuButton1">
-                    {% for account in staff %}
-                    {% if not account.user.username == "admin" %}
-                        <li><a class="dropdown-item">{{account}}</a></li>
-                    {% endif %}
-                    {% endfor %}
-                   
-                    </ul>
+                    <div class="col-auto">
+                        <div class="row" name="staffs">
+                            <div class="col-auto" name="staff_select">
+                                <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {% for account in Staff|slice:":1" %}
+                                    {% if not account.user.username == "admin" %}
+                                        {{account}}
+                                    {% endif %}
+                                    {% endfor %}
+                                </button>
+                                <ul class="dropdown-menu" name="staff" aria-labelledby="dropdownMenuButton1">
+                                {% for account in Staff %}
+                                {% if not account.user.username == "admin" %}
+                                    <li><a class="dropdown-item">{{account}}</a></li>
+                                {% endif %}
+                                {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <button type="button" class="btn btn-otline-info rounded-circle p-1" name="staffAdd" style="width:2rem;height:2rem;"><h4>＋</h4></button>
+                    </div>
+                    <div class="col-1">
+                        <button type="button" class="btn btn-otline-info rounded-circle p-1" name="staffDelete" style="width:2rem;height:2rem;"><h4>－</h4></button>
+                    </div>
                 </div>
             </div>
             <div class="col-4">
@@ -92,7 +123,7 @@ checksheet
                         <tr>
                             <th scope="row">小計</th>
                             <td>
-                                <p name="total-s-all">0</p>
+                                <p class="text-right" name="total-s-all">0</p>
                             </td>
                         </tr>
                         <tr>
@@ -114,12 +145,18 @@ checksheet
                                 <p name="total-all">0</p>
                             </td>
                         </tr>
+                        <tr>
+                            <th scope="row">割引</th>
+                            <td>
+                                <input type="text" pattern="[+-]?\d+" class="form-control" name="discount" value="{{CheckSheet.discount}}" style="width: 80px;"/>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         <div class="d-flex align-items-center">
-        <input type="text" name="client_name" class="form-control" value="{{CheckSheet.client}}" style="width: 200px;">
+        <input type="text" name="client_name" class="form-control" value="{{CheckSheet}}" style="width: 200px;">
         <h4>様</h4> 
        
 
@@ -131,7 +168,7 @@ checksheet
                     <tr>
                         <th scope="row">税込合計金額</th>
                         <td>
-                            <p name="total-f">0</p>
+                            <p class="form-control" name="total-f">0</p>
                         </td>
                     </tr>
                 </tbody>
@@ -139,14 +176,22 @@ checksheet
         </div>
         <br>
         <div class="row">
-            <div class="d-grid gap-1 mx-auto">
-                <input type="submit" class="btn btn-ontline-primary" name="save" value="保存">
-                <input type="submit" class="btn btn-ontline-success" name="payment" value="会計">
+            <div class="d-grid gap-1 mx-auto" id="submit_button">
+                <input type="submit" class="btn btn-outline-primary" name="save" value="保存">
+                {% if CheckSheet.asign %}
+                    <input type="submit" class="btn btn-outline-success" name="payment" value="会計">
+                {% endif %}
             </div> 
         </div>
-        </form>
+        <br>
+        <div class="form-floating">
+            <textarea class="form-control" name="memo" id="floatingTextarea" style="height: 200px">{{CheckSheet.memo_str}}</textarea>
+            <label for="floatingTextarea">Memo</label>
+        </div>
+        <br>
     </main>
 
+    </form>
 </div>
 
 {% endblock body %}
@@ -154,26 +199,74 @@ checksheet
 {% block script %}
 
 $(function(){
-    paymentCalc()
-    $('input[name="item_num"]').on("change", paymentCalc);
-    $('input[name="item_cost"]').on("change", paymentCalc);
+    paymentCalc();
+
+    var total = 0;
+
+    $('table[name="order_table"]').on("change", '#itemNumber', paymentCalc);
+    $('table[name="order_table"]').on("change", '#itemCost', paymentCalc);
+    $('input[name="discount"]').on("change", paymentCalc);
+
     function paymentCalc(){
-        var sum = 0
-        for(var i=0;i<$('input[name="item_num"]').length;i++){
+        var sum = 0;
+        for(var i=0;i<$('table[name="order_table"] #itemNumber').length;i++){
             var num = $('input[name="item_num"]').eq(i).val();
             var cost = $('input[name="item_cost"]').eq(i).val();
             var totals = num*cost;
             sum += totals;
             $('p[name="total"]').eq(i).html(num*cost);
-            //alert();
         }
         $('p[name="total-s-all"]').html(sum);
         $('p[name="total-20"]').html(Math.round(0.2*sum));
         sum = Math.round(1.2*sum);
         $('p[name="total-10"]').html(Math.round(0.1*sum));
         $('p[name="total-all"]').html(Math.round(1.1*sum));
-        $('p[name="total-f"]').html(Math.round(1.1*sum));
+        var discount = $('input[name="discount"]').val();
+        total = Math.round(1.1*sum)+discount*1
+        $('p[name="total-f"]').html(total);
+        $('#total_fee').val(total);
     }
+
+    $('button[name="orderAdd"]').on("click", function(){
+        var all = $('#item_field').html();
+        //alert(all);
+        $('table[name="order_table"]').append('<tr id="item_field">'+all+'</tr>');
+        
+        var item_length = $('table[name="order_table"] #itemNumber').length-1;
+        $('input[name="item_name"]').eq(item_length).val("");
+        $('input[name="item_num"]').eq(item_length).val(0);
+        $('input[name="item_cost"]').eq(item_length).val(0);
+        $('p[name="total"]').eq(item_length).text("0");
+        
+    })
+
+    $('button[name="staffAdd"]').on("click", function(){
+        var all = $('div[name="staff_select"]').html();
+        //alert(all);
+        $('div[name="staffs"]').append('<div class="col-auto" name="staff_select">'+all+'</div>');
+    })
+
+    $('button[name="staffDelete"]').on("click", function(){
+        index = $('div[name="staff_select"]').length-1;
+        //alert(index);
+        if (index > 0){
+            $('div[name="staff_select"]').eq(index).remove();
+        }
+    })
+
+    $('table[name="order_table"]').on("click", 'li', function(){
+        //alert($(this).val());
+        $(this).parents('#item_field').find('#itemNumber').val($(this).data('num'));
+        $(this).parents('#item_field').find('#itemCost').val($(this).data('cost'));
+        $(this).parent().parent().find('input').val($(this).text());
+        paymentCalc();
+    })
+
+    $('#all_staff').on("click", 'li', function(){
+        //alert($(this).text());
+        $(this).parents('div[name="staff_select"]').find('button').text($(this).text());
+    })
+
 });
 
 {% endblock script %}
