--- a/templates/attendance/select_seat.html
+++ b/templates/attendance/select_seat.html
@@ -100,7 +100,7 @@ select seat
                     //alert($(this).parent().find('label').attr("class"));
                     $(this).parent().find('label').css('background-color', 'limegreen');
                 }else{
-                    $(this).parent().find('label').css('background-color', '');
+                    $(this).parent().find('label').css('background-color', 'rgb(13,110,253)');
                 }
             })
             if(is_primary && is_danger){
