--- a/templates/attendance/comp_checksheet.html
+++ b/templates/attendance/comp_checksheet.html
@@ -138,7 +138,7 @@
                     <tr>
                         <th style="background-color: lightgrey;">税込合計金額</th>
                         <td style="background-color: lightcyan;">
-                            <h5 id="total-f">¥0</h5>
+                            <h5 id="total-f">¥{{CheckSheet.total_fee}}</h5>
                         </td>
                     </tr>
                 </tbody>
